Fixed Form Alignment and Datepicker Formats

--- a/src/app/dashboard/components/notifications/create-event-form/create-event-form.component.scss
+++ b/src/app/dashboard/components/notifications/create-event-form/create-event-form.component.scss
@@ -14,6 +14,12 @@
   }
 
   .input-group {
+    margin: 0 1rem 1rem;
+
+    &.vertical {
+      flex-direction: column;
+      margin-bottom: 2rem;
+    }
 
     &.sub {
       margin-right: 0;
@@ -32,15 +38,19 @@
           right: 0;
         }
       }
-
-      .input-label {
-        height: 18px !important;
-      }
     }
 
     .input-label {
       margin-bottom: 0.625rem;
       @include input-text-style(14px, #333539);
+
+      &.transparent {
+        color: transparent;
+
+        &::selection {
+          color: transparent;
+        }
+      }
     }
 
     .input-control {
@@ -61,13 +71,11 @@
         resize: none;
         overflow-y: auto;
       }
+    }
 
-      .image-group {
-        width: 330px;
-
-        & img {
-          margin-left: 1rem;
-        }
+    .image-group {
+      .icon-1 {
+        margin-right: 1rem;
       }
     }
 
